Finished Tab3 coin ranges

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="coupons">Coupons</string>
     <string name="malls">Malls</string>
+    <string name="coins">Coins</string>
 </resources>
