--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="coupons">Coupons</string>
     <string name="malls">Malls</string>
     <string name="coins">Coins</string>
-    <string name="url">https://7b4e-158-182-197-189.ngrok.io/</string>
+    <string name="url">https://ac68-158-182-114-185.ngrok.io/</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="profile">Profile</string>
