--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="malls">Malls</string>
     <string name="coins">Coins</string>
     <!-- change url here -->
-    <string name="url">https://e298-158-182-114-185.ngrok.io/</string>
+    <string name="url">https://4f8e-158-182-113-34.ngrok.io/</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="profile">Profile</string>
